--- a/MusicPlayer/web/login.html
+++ b/MusicPlayer/web/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-      <title>音乐播放器登录页面</title>
+      <title>Rainbow音乐登录页面</title>
 
     <!-- 1. 导入CSS的全局样式 -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 				var username=$("#user").val();
 				var password=$("#password").val();
 				$.ajax({
-					url:"/GaoBoMusic/loginServlet",
+					url:"/loginServlet",
                     data:{"username":username,"password":password},
                     type:"POST",
 					dataType:"json",
