--- a/MusicPlayer/web/login.html
+++ b/MusicPlayer/web/login.html
@@ -9,7 +9,7 @@
       <title>Rainbow音乐登录页面</title>
 
     <!-- 1. 导入CSS的全局样式 -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- 2. jQuery导入，建议使用1.9以上的版本 -->
     <script src="js/jquery-3.1.1.min.js"></script>
     <!-- 3. 导入bootstrap的js文件 -->
@@ -17,7 +17,7 @@
 	  <script type="text/javascript"></script>
 	  <style>
 		  #body{
-			  background-image: url("images/3.png");
+			  background-image: url("images/1.jpg");
               /*background-size:100% 100%;
               background-attachment: fixed;*/
       }
