--- a/MusicPlayer/web/list.html
+++ b/MusicPlayer/web/list.html
@@ -175,7 +175,7 @@
         </form>
     </div>
     <div style="float: right;margin-bottom: 15px">
-        <a class="btn btn-primary" href="/rainbowMusic/MV.html">MV列表</a>
+        <!--<a class="btn btn-primary" href="/rainbowMusic/MV.html">MV列表</a>-->
         <a class="btn btn-primary" href="/rainbowMusic/loveMusic.html">喜欢列表</a>
         <a class="btn btn-primary" href="/rainbowMusic/upload.html">添加歌曲</a>
         <a id="delete" class="btn btn-primary">删除选中</a>
